fix: gap of icons in footer
Resolves: #19

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,6 +1,7 @@
 .icon-column {
   display: flex;
-  row-gap: 30px;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   color: mediumvioletred;
 }
 
